# exactextract

./: .clang-format  .flake8  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .style.yapf  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NEWS.md  README.md  codecov.yml  project.ini  pyproject.toml  pytest.ini  setup.py
.github/: python_test_env.yml
.github/workflows/: code_checks.yml  docker.yml  linux_build.yml  pages.yml  python.yml
benchmark/: CMakeLists.txt  bm_stats.cpp
ci/: Dockerfile.geos37  Dockerfile.gitlabci  Dockerfile.unittest  docker_build_ci.sh  download_sample_data.sh
ci/wheels/: install_geos.cmd  install_geos.sh
ci/wheels/licenses/: LICENSE_GEOS
cmake/: FindNetCDF.cmake  VersionSource.cmake
docs/: Doxyfile.in
example/: zonal_example.cpp
pydocs/: conf.py  exactextract.rst  index.rst  modules.rst
python/: CMakeLists.txt  README.md  project.ini  pyproject.toml  setup.py
python/doc/: .gitignore  background.rst  basic_usage.ipynb  conf.py  examples.rst  examples_cli.rst  examples_python.rst  faq.rst  index.rst  installation.rst  landcov.ipynb  noise_average_udf.ipynb  operations.rst  performance.rst  requirements.txt
python/src/exactextract/: __init__.py  dataset.py  exact_extract.py  feature.py  feature_source.py  operation.py  processor.py  raster.py  raster_source.py  utils.py  writer.py
python/src/pybindings/: bindings.cpp  feature_bindings.cpp  feature_bindings.h  feature_source_bindings.cpp  feature_source_bindings.h  operation_bindings.cpp  operation_bindings.h  processor_bindings.cpp  processor_bindings.h  raster_source_bindings.cpp  raster_source_bindings.h  writer_bindings.cpp  writer_bindings.h
python/tests/: conftest.py  test_dataset.py  test_exact_extract.py  test_feature.py  test_feature_source.py  test_operation.py  test_process.py  test_processor.py  test_raster.py  test_raster_source.py  test_version.py  test_writer.py
python/tests/data/: simple_multilayer.gpkg  simple_raster.nc  simple_raster.tif
src/: area.cpp  area.h  box.cpp  box.h  cell.cpp  cell.h  coordinate.cpp  coordinate.h  coverage_operation.h  coverage_processor.cpp  coverage_processor.h  coverage_writer.cpp  coverage_writer.h  crossing.h  csv_utils.cpp  csv_utils.h  csv_writer.cpp  csv_writer.h  deferred_gdal_writer.cpp  deferred_gdal_writer.h  exactextract.cpp  extent.cpp  extent.h  feature.cpp  feature.h  feature_sequential_processor.cpp  feature_sequential_processor.h  feature_source.h  floodfill.cpp  floodfill.h  gdal_dataset_wrapper.cpp  gdal_dataset_wrapper.h  gdal_feature.h  gdal_feature_unnester.h  gdal_raster_wrapper.cpp  gdal_raster_wrapper.h  gdal_writer.cpp  gdal_writer.h  geos_utils.cpp  geos_utils.h  (+51 more)
src/pybindings/: bindings.cpp  box_bindings.cpp  box_bindings.h  cell_bindings.cpp  cell_bindings.h  coordinate_bindings.cpp  coordinate_bindings.h  gdal_dataset_wrapper_bindings.cpp  gdal_dataset_wrapper_bindings.h  gdal_raster_wrapper_bindings.cpp  gdal_raster_wrapper_bindings.h  grid_bindings.cpp  grid_bindings.h  operation_bindings.cpp  operation_bindings.h  processor_bindings.cpp  processor_bindings.h  side_bindings.cpp  side_bindings.h  utils_bindings.cpp  utils_bindings.h  writer_bindings.cpp  writer_bindings.h
test/: CMakeLists.txt  test_box.cpp  test_cell.cpp  test_cli.py  test_csv.cpp  test_extent.cpp  test_feature.cpp  test_gdal.cpp  test_geos_utils.cpp  test_grid.cpp  test_legacy_grid.cpp  test_operation.cpp  test_perimeter_distance.cpp  test_raster.cpp  test_raster_area.cpp  test_raster_cell_intersection.cpp  test_raster_iterator.cpp  test_stats.cpp  test_traversal_areas.cpp  test_utils.cpp
