[project]
name = "exactextract"
description = "Fast and accurate raster zonal statistics"
license.file = "LICENSE"
url = "https://github.com/isciences/exactextract"
authors = [
  { "name" = "Daniel Baston" }
]
requires-python = ">=3.9"
classifiers = [
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
readme = "README.md"

[build-system]
requires=["scikit-build-core", "pybind11"]
build-backend="scikit_build_core.build"

[tool.scikit-build]
sdist.exclude=[
  ".clang-format",
  ".dockerignore",
  ".github",
  ".git-blame-ignore-revs",
  ".gitignore",
  ".gitlab-ci.yml",
  ".pre-commit-config.yaml",
  ".pytest_cache",
  "Dockerfile",
  "benchmark",
  "ci",
  "codecov.yml",
  "test"
]
cmake.targets = ["_exactextract"]
cmake.define = {"BUILD_CLI"= "NO", "BUILD_DOC"= "NO", "BUILD_BENCHMARKS"= "NO", "BUILD_TEST"= "NO"}
wheel.packages=["python/src/exactextract"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "cmake/VersionSource.cmake"
regex = "EXACTEXTRACT_VERSION_SOURCE \"(?P<value>.+)\""
